Mario e Luigi completati

--- a/index.html
+++ b/index.html
@@ -9,52 +9,400 @@
     <body>
         <div class="container">
             <div class="row">
+                <div class="red col-5 col-offset-3">
 
+                </div>
             </div>
             <div class="row">
+                <div class="red col-9 col-offset-2">
 
+                </div>
             </div>
             <div class="row">
+                <div class="brown col-3 col-offset-2">
 
+                </div>
+                <div class="white col-2">
+
+                </div>
+                <div class="black col-1">
+
+                </div>
+                <div class="white col-1">
+
+                </div>
             </div>
             <div class="row">
+                <div class="brown col-1 col-offset-1">
 
+                </div>
+                <div class="white col-1">
+
+                </div>
+                <div class="brown col-1">
+
+                </div>
+                <div class="white col-3">
+
+                </div>
+                <div class="black col-1">
+
+                </div>
+                <div class="white col-3">
+
+                </div>
             </div>
             <div class="row">
+                <div class="brown col-1 col-offset-1">
 
+                </div>
+                <div class="white col-1">
+
+                </div>
+                <div class="brown col-2">
+
+                </div>
+                <div class="white col-3">
+
+                </div>
+                <div class="black col-1">
+
+                </div>
+                <div class="white col-3">
+
+                </div>
             </div>
             <div class="row">
+                <div class="brown col-2 col-offset-1">
 
+                </div>
+                <div class="white col-4">
+
+                </div>
+                <div class="black col-4">
+
+                </div>
             </div>
             <div class="row">
+                <div class="white col-7 col-offset-3">
 
+                </div>
             </div>
             <div class="row">
+                <div class="red col-2 col-offset-2">
 
+                </div>
+                <div class="blue col-1">
+
+                </div>
+                <div class="red col-4">
+
+                </div>
             </div>
             <div class="row">
+                <div class="red col-3 col-offset-1">
 
+                </div>
+                <div class="blue col-1">
+
+                </div>
+                <div class="red col-2">
+
+                </div>
+                <div class="blue col-1">
+
+                </div>
+                <div class="red col-3">
+
+                </div>
             </div>
             <div class="row">
+                <div class="red col-4">
 
+                </div>
+                <div class="blue col-4">
+
+                </div>
+                <div class="red col-4">
+
+                </div>
             </div>
             <div class="row">
+                <div class="white col-2">
 
+                </div>
+                <div class="red col-1">
+
+                </div>
+                <div class="blue col-1">
+
+                </div>
+                <div class="yellow col-1">
+
+                </div>
+                <div class="blue col-2">
+
+                </div>
+                <div class="yellow col-1">
+
+                </div>
+                <div class="blue col-1">
+
+                </div>
+                <div class="red col-1">
+
+                </div>
+                <div class="white col-2">
+
+                </div>
             </div>
             <div class="row">
+                <div class="white col-3">
 
+                </div>
+                <div class="blue col-6">
+
+                </div>
+                <div class="white col-3">
+
+                </div>
             </div>
             <div class="row">
+                <div class="white col-2">
 
+                </div>
+                <div class="blue col-8">
+
+                </div>
+                <div class="white col-2">
+
+                </div>
             </div>
             <div class="row">
+                <div class="blue col-3 col-offset-2">
 
+                </div>
+                <div class="blue col-3 col-offset-2">
+
+                </div>
             </div>
             <div class="row">
+                <div class="black col-3 col-offset-1">
 
+                </div>
+                <div class="black col-3 col-offset-4">
+
+                </div>
             </div>
             <div class="row">
+                <div class="black col-4">
 
+                </div>
+                <div class="black col-4 col-offset-4">
+
+                </div>
+            </div>
+            <div class="conteiner">
+                <div class="row">
+                    <div class="green col-5 col-offset-4">
+
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="green col-9 col-offset-1">
+
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="white col-1 col-offset-3">
+
+                    </div>
+                    <div class="black col-1">
+
+                    </div>
+                    <div class="white col-2">
+
+                    </div>
+                    <div class="brown col-3">
+
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="white col-3 col-offset-1">
+
+                    </div>
+                    <div class="black col-1">
+
+                    </div>
+                    <div class="white col-3">
+
+                    </div>
+                    <div class="brown col-1">
+
+                    </div>
+                    <div class="white col-1">
+
+                    </div>
+                    <div class="brown col-1">
+
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="white col-3">
+
+                    </div>
+                    <div class="black col-1">
+
+                    </div>
+                    <div class="white col-3">
+
+                    </div>
+                    <div class="brown col-2">
+
+                    </div>
+                    <div class="white col-1">
+
+                    </div>
+                    <div class="brown col-1">
+
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="black col-4 col-offset-1">
+
+                    </div>
+                    <div class="white col-4">
+
+                    </div>
+                    <div class="brown col-1">
+
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="white col-6 col-offset-3">
+
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="green col-2 col-offset-2">
+
+                    </div>
+                    <div class="blue col-1">
+
+                    </div>
+                    <div class="green col-2">
+
+                    </div>
+                    <div class="blue col-1">
+
+                    </div>
+                    <div class="green col-2">
+
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="green col-3 col-offset-1">
+
+                    </div>
+                    <div class="blue col-1">
+
+                    </div>
+                    <div class="green col-2">
+
+                    </div>
+                    <div class="blue col-1">
+
+                    </div>
+                    <div class="green col-3">
+
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="green col-4">
+
+                    </div>
+                    <div class="blue col-4">
+
+                    </div>
+                    <div class="green col-4">
+
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="white col-2">
+
+                    </div>
+                    <div class="green col-1">
+
+                    </div>
+                    <div class="blue col-1">
+
+                    </div>
+                    <div class="yellow col-1">
+
+                    </div>
+                    <div class="blue col-2">
+
+                    </div>
+                    <div class="yellow col-1">
+
+                    </div>
+                    <div class="blue col-1">
+
+                    </div>
+                    <div class="green col-1">
+
+                    </div>
+                    <div class="white col-2">
+
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="white col-3">
+
+                    </div>
+                    <div class="blue col-6">
+
+                    </div>
+                    <div class="white col-3">
+
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="white col-2">
+
+                    </div>
+                    <div class="blue col-8">
+
+                    </div>
+                    <div class="white col-2">
+
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="blue col-3 col-offset-2">
+
+                    </div>
+                    <div class="blue col-3 col-offset-2">
+
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="black col-3 col-offset-1">
+
+                    </div>
+                    <div class="black col-3 col-offset-4">
+
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="black col-4">
+
+                    </div>
+                    <div class="black col-4 col-offset-4">
+
+                    </div>
+                </div>
             </div>
         </div>
     </body>
